fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/* add the code bellow */
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 /* width */
 /* ::-webkit-scrollbar {
   width: 6px;
@@ -23,5 +36,13 @@
 } */
 
 ::-webkit-scrollbar {
+  display: none;
+}
+
+/* disable scroll bar */
+::-webkit-scrollbar-track {
+}
+
+#chat-section::-webkit-scrollbar {
   display: none;
 }
